--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "chrome-aws-lambda": "^10.1.0",
     "express": "^4.19.2",
     "nodemon": "^3.1.3",
-    "puppeteer": "^22.11.2",
     "puppeteer-core": "^10.1.0"
+  },
+  "devDependencies": {
+    "puppeteer": "^22.11.2"
   }
 }
