--- a/package.json
+++ b/package.json
@@ -4,18 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node main.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "chrome-aws-lambda": "^10.1.0",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "nodemon": "^3.1.3",
-    "puppeteer-core": "^10.1.0"
-  },
-  "devDependencies": {
     "puppeteer": "^22.11.2"
   }
 }
